feat: savepoint & new bibliography

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -6,10 +6,10 @@
 
 \begin{table}[h]		
 	\begin{tabular}{ll}
-		TCP & Transmission Control Protocol \\
-		VR & Virtual Reality \\
 		OSM & OpenStreetMap \\
 		JOSM & Java OpenStreetMap editor \\
 		BBOX & Bounding Box \\
+		GPX & GPS Exchange Format \\
+		XML & Extensible Markup Language \\
 	\end{tabular}
 \end{table}
