--- a/body.tex
+++ b/body.tex
@@ -6,45 +6,41 @@
 \section{Introduction}
 \label{section:Introduction}
 
-The aim of this paper is to get a correlation between pedestrian traffic and route satisfaction. Given an open GPS Trajectories Dataset from the OpenStreetMap Project the research was conducted on the historical walking data in the city of Salzburg in Austria. Due to the historical growth of the city, footpaths, and pedestrian areas along with roads for private and public transport are limited to change and urban development (SOURCE). 
+This paper aims to get a correlation between pedestrian traffic and route satisfaction. Given an open GPS Trajectories Dataset from the OpenStreetMap project, the research was conducted on the historical walking data in the City of Salzburg in Austria. Due to the city's historical growth, footpaths, pedestrian areas, and private and public transport roads are limited to change and urban development (SOURCE). 
+
+\autocite[]{Netsch2021}
 
 Historical traffic pattern mining and analysis for traffic forecasting and improving traffic flow is nothing new to vehicle traffic management. Multiple studies focus on collecting data, analyzing patterns, and forecasting traffic flow for vehicle traffic. 
 
 Is it possible to increase satisfaction by recommending alternative, less populated routes to tourist attractions using pedestrian path model techniques?
 
-This template is used for seminar papers, bachelor and master theses at MultiMediaTechnology of the Salzburg University of Applied Sciences. 
-
-The structure of the template fits many theses works. Seminar papers often require their own structure as it is a literature review on a specific topic and does not present your own work.
-
-Outline the research field and lead towards your research question. How is the investigated issue resolved in related work? What are limitations of these solutions? What is your contribution to find a solution?
-
-The purpose of the research is to study the development of the concept of actorness in the literature and apply it to the European Union by studying and comparing the actorness of the last in the spheres of energy and environment
-
-The structure of the thesis goes as follows: the literature review elaborates on the main definition of the research, namely actorness, its characteristics, as well as the actorness of the EU in the energy and environmental sphere. Chapter I reveals the development of the EU energy policy as a shared competence, adds clearness to the concept of actorness in the present context, and discusses the basic European and international legislation and the changes brought by it. Chapter II examines the history of the environmental policy of the EU and reveals the Union’s actorness in this regard. The conclusion of the thesis compares the EU actorness in the energy and environmental sphere and tries to predict the further developments and the challenges of the issue in question.
 
 \section{Background}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi luctus lacinia sagittis. Maecenas vestibulum ex quam, eget placerat mi pharetra ut. Cras molestie lectus eget efficitur sagittis. Ut porttitor lobortis odio, eget commodo velit consectetur vitae. Quisque ornare auctor neque eleifend bibendum. Praesent molestie efficitur pulvinar. Nullam lobortis lacus sit amet mi tempor, sed suscipit dolor euismod. Pellentesque eget orci eget risus pharetra sodales sed vel nunc. Praesent consequat urna eu libero vestibulum porttitor.
-
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 
 \section{Related Work}
 Introduce why this specific related work is important for your own work. Which areas do you cover and why? What do you take as inspiration and what do you do differently/improve upon? 
 
 \autocite[]{Sevtsuk2021}
-  
+
+\autocite[]{Delling2012}
+\autocite[]{Hashemi2017}
+\autocite[]{Qiu2015}
+\autocite[]{Hendawi2019}
+\autocite[]{Huber2016}
 
 \section{Method}
 
-To be able to measure a possible increase in satisfaction of the route proposal a qualitative trail run will be conducted. In this trail run a standard route will be compared to the newly proposed route and measured by using two surveys. Survey number one is using a quantitative approach to find out the subjects general travel behavior while survey number two is there to compare and measure the satisfaction with a quantitative approach after conducting the trail run.
+A qualitative trail run will be conducted to measure a possible increase in satisfaction with the route proposal. In this trial run, a standard route will be compared to the newly proposed route and measured using two surveys. Survey number one uses a quantitative method to determine the subjects' general travel behavior, while survey number two compares and measures satisfaction with a quantitative approach after the trial run.
 
-Finding out about the subjects travel behavior should give a better understanding of the results from the route proposal satisfaction survey. Furthermore it is going to give a relation to the subjects travel behavior and the increase or decrease in satisfaction.
+Finding out about the subjects' travel behavior should give a better understanding of the route proposal satisfaction survey results. Furthermore, it will give a relation to the subjects' travel behavior and the increase or decrease in satisfaction.
 
 Qualitative Surveys.
 
-Proposing said alternative route will be done by using the influence of historical pedestrian traffic to calculate a route with less interactions for the traveler to get to the same goal. This is going to be done by analysing historical GPS trajectories and using a customized routing engine proposing the route for the trail run.   through a GPS trace analysis and   
+Proposing the alternative route will be done by using the influence of historical pedestrian traffic to calculate a route with fewer interactions for the traveler to get to the same goal. This will be done by analyzing historical GPS trajectories and using a customized routing engine to propose the route for the trail run. through a GPS trace analysis and   
 
 
-
-In present work, various research methods have been applied. They include a descriptive method (outlining different approaches to the term “actorness” and identifying the ways of measuring it), a historical method (following the historical development of the shared energy and environmental policies in the EU and their adaptation to the realities of the modern world), a comparative method (e.g., conferring the definitions of actorness and the level of actorness of the EU in energy and environmental spheres), statistical and quantitative (e.g., providing statistical data on the ecological goals and sustainable development, import of energy resources), analytical (e.g., assuming how the public opinion on the ecological situation contributes to the changing of the adopted energy policies), and process tracing method (e.g., identifying the causal mechanisms that link opportunity, presence, capability, performance, and effect, i.e., EU actorness).
+In present work, various research methods have been applied. They include a descriptive method (outlining different approaches to the term "actorness" and identifying the ways of measuring it), a historical method (following the historical development of the shared energy and environmental policies in the EU and their adaptation to the realities of the modern world), a comparative method (e.g., conferring the definitions of actorness and the level of actorness of the EU in energy and environmental spheres), statistical and quantitative (e.g., providing statistical data on the ecological goals and sustainable development, import of energy resources), analytical (e.g., assuming how the public opinion on the ecological situation contributes to the changing of the adopted energy policies), and process tracing method (e.g., identifying the causal mechanisms that link opportunity, presence, capability, performance, and effect, i.e., EU actorness).
 
 
 Using the influence of traffic to propose an alternative route 
@@ -53,61 +49,61 @@ To be able to measure a possible increase in satisfaction of the route proposal 
 
 Therefore a route for the proposal to be compared to has to be found.
 
-
-
-
 \section{System Overview}
 
+Provide a high level overview of your system, approach, etc. 
+Describe features, user interfaces, provide screenshots.
+What does a user do with your application/system/interaction method?
 
-
-
+Map Application
 
 \section{Data Analysis}
 
-To be able to create the historical pedestrian traffic / walking patterns a solid Data-set is needed so the routing engine can be configured to be adapted to the influence of the walking patterns. 
+To create the historical pedestrian traffic/walking patterns, a solid Data-set is needed so the routing engine can be configured to be adapted to the influence of the walking patterns. 
 
-Searching for a Data-set that is viable for further analysis was not an easy task. There is no data available publicly from the city itself neither any local research institutions was we have contacted during the research period had such data available. Therefore the OSM (OpenStreetMap) Project and its Database of public traces came in handy to be extracted, verified, classified and then used to create a historical pedestrian traffic pattern for the part of the city that was used to create the alternative route.
+Searching for a Data-set that is viable for further analysis was not an easy task. There is no publicly available data from the city itself. Also, local research institutions contacted during the research period have no such data available. Therefore the OSM (OpenStreetMap) Project and its Database of public traces came in handy. Their collection is publicly accessible to be extracted, verified, classified, and then used to create a historical pedestrian traffic pattern for the part of the city that was used to create the alternative route.
+
+% Struggles from Hashemi to relate here too.
+% Cite:
+%
+%However, GPS traces are stored in plain text formats with no attached metadata such as, transpor- tation mode, length, or speed. This not only makes managing large volumes of GPS traces inefficient but also restricts the scale and scope of algorithms for human mobility pattern detection. Open Street Map (OSM), founded in UK in 2004 with more than 1 million registered users (Wood, 2013), is the most prominent volunteered geographic information devoted to providing a free map of the world empha- sizing the road networks. Road networks are built upon GPS traces uploaded by registered users and can be edited or updated manually at any time. A description can be associated to a GPS trace while being uploaded but there are no additional required metadata or restrictions (https://www.open- streetmap.org/traces; OpenStreetMap, n.d.). This means the transportation mode of the GPS trace (e.g. walking, motoring, or boating) cannot be known in the database which in turn limits the data- base’s applications. Besides, they do not store additional metadata, such as average speed or total length of the GPS trace which can be automatically calculated. Such metadata not only facilitates analyzing, mining, and visualizing large volumes of GPS traces, but also paves the path for automatic applications of GPS traces. Examples of such applications are automatic road and pedestrian network construction (Hashemi, 2017b), recognizing POIs (Bhattacharya, Kulik, & Bailey, 2015), developing intelligent location-based services (Liu & Karimi, 2006), detecting individual (Song et al., 2010), or collective (Becker et al., 2013; Harder, Nes, Jensen, Reinau, & Weber, 2012) mobility patterns, and real-time event detection which is of great value to municipalities, police, and fire departments.
+%
+%
 
 The OSM Database of public traces consists of over 11 billion uploaded GPS points around the globe. \footnote{\url{https://planet.openstreetmap.org/statistics/data_stats.html}}
 
-As the studies focus is the City of Salzburg an appropriate bounding box covering the inner city and most of its close to be districts was selected. 
+As the study's focus is the City of Salzburg, an appropriate bbox (Bounding box) covering the inner city and most of its close-to-be districts was selected. 
 
-The reason for overlapping also with towns and places around Salzburg is the OSM Editing API. We wanted to get as much traces as possible leading into the city so a more accurate estimation of pedestrian traffic is made possible. As the API is only taking routes that lead through the bounding box given a bigger sample area than necessary for the route proposal was taken in account. The box taken is seen in Figure \ref{figure:BoundingBox}.
+The reason for overlapping with towns and places around Salzburg is the OSM Editing API. Getting as many traces as possible leading into the city makes a more accurate estimation of pedestrian traffic possible. As the API is only taking routes that lead through the bbox , given a more extensive sample area than necessary for the route proposal was taken into account. The bbox taken is seen in Figure \ref{figure:BoundingBox}.
 
 %figure* stretches figure over both columns
 \begin{figure*}[t]
- 	\centering
- 	\includegraphics[width=0.9\textwidth]{images/BoundingBoxOSM.png}
- 	\caption{
- 		Bounding Box for extracted GPS trajectories.
- 	}
- 	%for reference to this figure
- 	\label{figure:BoundingBox}
+  \centering
+  \includegraphics[width=0.9\textwidth]{images/BoundingBoxOSM.png}
+  \caption{
+  Bounding Box for extracted GPS trajectories.
+  }
+  %for reference to this figure
+  \label{figure:BoundingBox}
 \end{figure*}
+
 
 \subsection{Data-set Overview}
 
-Given the bounding box of Salzburg and its surroundings 1.173.334 Data-points were extracted using the OSM Editing API. \footnote{\url{https://wiki.openstreetmap.org/wiki/API_v0.6#GPS_traces}}
+Given the bbox of Salzburg and its surroundings, 1.173.334 Data-points were extracted using the OSM Editing API. \footnote{\url{https://wiki.openstreetmap.org/wiki/API_v0.6#GPS_traces}}
 
-The OSM Editing API is a collection of APIs based on RESTful API principles. There are API calls to create, read, update, and delete the three fundamental elements that make up OpenStreetMap's map data. They each return or expect the data for the elements in a XML format.
+The OSM Editing API is a collection of APIs based on RESTful API principles. There are API calls to create, read, update, and delete the three fundamental elements that makeup OpenStreetMap's map data. They each return or expect the data for the elements in an XML format.
 \autocite[]{wiki:xxx}
 
-The Data-points are returned in a XML format using the GPX standard. \footnote{\url{https://www.topografix.com/GPX/1/1/#type_trksegType}} Important to mention is, that for privacy reasons all waypoints of non-trackable traces are randomized and delivered as one trackSegment. This happens in violation of the GPX standard. 
+The Data-points are returned using GPX (GPS Exchange Format) a XML data format for GPS data \footnote{\url{https://www.topografix.com/GPX/1/1/#type_trksegType}}. Important to mention is that in violation of the GPX standard, for privacy reasons, all waypoints of non-trackable traces are randomized and delivered as one track segment. 
 
-Get GPS Points: Get /api/0.6/trackpoints?bbox=left,bottom,right,top&page=pageNumber
+GPX (the GPS Exchange Format) is a light-weight XML data format for the interchange of GPS data (waypoints, routes, and tracks) between applications and Web services on the Internet. 
 
+Important to mention is that This happens in violation of the GPX standard. 
 
-Use this to retrieve the GPS track points that are inside a given bounding box (formatted in a GPX format).
-
-where:
-
-left, bottom, right, and top are used the same way as they are in the command to retrieve nodes, ways, and relations.
-
-pageNumber specifies which group of 5,000 points, or page, to return. Since the command does not return more than 5,000 points at a time, this parameter must be incremented—and the command sent again (using the same bounding box)—in order to retrieve all of the points for a bounding box that contains more than 5,000 points. When this parameter is 0 (zero), the command returns the first 5,000 points; when it is 1, the command returns points 5,001–10,000, etc.
-
+To further work with the data points 
 
 \subsection{Data Extraction}
-
 
 \begin{lstlisting}
 <?xml version="1.0" encoding="UTF-8"?>
@@ -129,52 +125,114 @@ pageNumber specifies which group of 5,000 points, or page, to return. Since the 
             
 \end{lstlisting}
 
-
-
-
 \section{Model & Implementation}
+
 Provide implementation details such as the used software and our software architecture, highlight your own solutions to encountered difficulties. Describe relevant iterations of your implementation.
+
+Before going deeper into the system architecture 
+To go deeper into the system architecture 
+Overview of the software basis used for the whole development: 
+NodeJS, React,
 
 Providing a route proposal starts further than analyzing geo-located trajectories. Precautious steps were needed in building the architecture to understand the data used for the newly suggested route. 
 
-Therefore a Map Application was created to visualize the extracted and classified data, the routes used for the comparison, and the new suggested routes from the utilized routing engine. Said Map Application is a standalone React App using the Mapbox Plattform for map creation and route visualization. \footnote{\url{https://www.mapbox.com/}} For working with React, Mapbox provides mapbox-gl-js, a javascript library that uses WebGL to render interactive maps from vector tiles and Mapbox styles. \footnote{\url{https://docs.mapbox.com/mapbox-gl-js/guides/}}
+Therefore a Map Application was created to visualize the extracted and classified data, the routes used for the comparison, and the new suggested routes from the utilized routing engine. Said Map Application is a standalone React App using the Mapbox Plattform for map creation and route visualization. For working with React, Mapbox provides mapbox-gl-js, a javascript library that uses WebGL to render interactive maps from vector tiles and Mapbox styles.
 
-For the map and route visualization to interact with the extracted geo trajectory data, a NodeJS backend was developed. The backend interacts with the OSM API and the established Geo-Database, handling the trajectories extraction, classification, and transformation.
+%https://www.mapbox.com/
+%https://docs.mapbox.com/mapbox-gl-js/guides/
 
-With its geospatial data support, MongoDB was selected as the Geo-Database and stores the extracted Data-Set and the further classified data objects. Even though PostGIS \footnote{\url{http://postgis.net/}} is more mature and built on the Open Geospatial Consortium (OGC) standards, the uncertainty of incomplete data sets from the OSM project led to the decision to use the document-based solution.
+For the map and route visualization to interact with the extracted geo trajectory data, a NodeJS backend was developed. The backend interacts with the OSM API and the established GeoDatabase, handling the trajectories' extraction, classification, and transformation.
 
-To work with the OSM project and its map data, the JOSM (Java OpenStreetMap editor) was used to interact with the map layer as the basis for the route proposal. \footnote{\url{https://josm.openstreetmap.de/}}
+With its geospatial data support, MongoDB was selected as the Geo-Database and stores the extracted Data-Set and the further classified data objects. Even though PostGIS is more mature and built on the Open Geospatial Consortium (OGC) standards, the uncertainty of incomplete data sets from the OSM project led to the decision to use the document-based solution.
+
+To work with the OSM project and its map data, the JOSM (Java OpenStreetMap editor) was used to interact with the map layer as the basis for the route proposal. 
+%https://josm.openstreetmap.de/
+
+For the data extraction, a NodeJS backend interacting with the OSM API and the established GeoDatabase was created, handling the extraction, classification, and visualization of the trajectories and route suggestions.
+
+Therefore a visualization of the City of Salzburg was built using the Mapbox Plattform. 
+% https://docs.mapbox.com/mapbox-gl-js/guides/
+
 
 
 % https://wiki.openstreetmap.org/wiki/Bounding_Box
 
-Data Extraction
+\subsection{Database}
 
-% https://www.topografix.com/GPX/1/1/#type_trksegType
-
-Data Conversion
-
-% https://github.com/mapbox/togeojson
-
-Database
-
+After the conversion the objects 
 Working with Geodata there is 
 
 MongoDB & Mongoose
+% https://mongoosejs.com/docs/geojson.html
+% https://www.mongodb.com/docs/manual/reference/geojson/
+
+\subsection{Data Extraction}
+
+Working with the OSM API
+
+To retrieve the GPS track points 
+
+https://api.openstreetmap.org/api/0.6/trackpoints?bbox=12.9337,47.7564,13.2032,47.8560&page=0
+
+Get GPS Points: Get /api/0.6/trackpoints?bbox=left,bottom,right,top&page=pageNumber
+Use this to retrieve the GPS track points that are inside a given bounding box (formatted in a GPX format).
+
+Get GPS Points: Get /api/0.6/trackpoints?bbox=left,bottom,right,top&page=pageNumber
+
+
+Use this to retrieve the GPS track points that are inside a given bounding box (formatted in a GPX format).
+
+where:
+
+left, bottom, right, and top are used the same way as they are in the command to retrieve nodes, ways, and relations.
+
+pageNumber specifies which group of 5,000 points, or page, to return. Since the command does not return more than 5,000 points at a time, this parameter must be incremented—and the command sent again (using the same bounding box)—in order to retrieve all of the points for a bounding box that contains more than 5,000 points. When this parameter is 0 (zero), the command returns the first 5,000 points; when it is 1, the command returns points 5,001–10,000, etc.
+
+% https://www.topografix.com/GPX/1/1/#type_trksegType
+
+\subsection{Data Prepocessing}
+
+Conversion
+
+As the objects returned from the API are in the GPX Format, a conversion step was needed to further work with the trajectories. As the MongoDB Database and the libraries used in the built Map Application are working with the GeoJSON standard \footnote{\url{https://datatracker.ietf.org/doc/html/rfc7946}}, a conversion step was necessary.
+
+The conversion was achieved using the toGeoJSON tool \footnote{\url{https://github.com/mapbox/togeojson}} provided by Mapbox. After the first objects were converted, a significant number of them had attributes missing after the conversion.  Therefore, the tool was adapted according to the GPX Formats' given attributes used by the OSM API.  
+
+Attributes added: Properties
+
+Using the tool togeojson provided by Mapbox the conversion was 
+
+% https://github.com/mapbox/togeojson
+
+\subsection{Map-Matching}
 
 
 
-Data Prepocessing
+\subsection{Data Classification}
+
 
 TurfJS
 
-Routing Engine
 
-nominatim
+
+
 
 osrm
 
 Mapbox API
+
+
+
+\subsection{Reverse Geo-coding}
+
+nominatim
+
+\subsection{Routing}
+
+Routing Engine
+
+\autocite[]{Delling2012}
+
 
 \section{}
 
